[ADD] Автозаполнение значений дат в заведении

--- a/src/FlexTemplate/Views/Home/NewPlace.cshtml
+++ b/src/FlexTemplate/Views/Home/NewPlace.cshtml
@@ -190,7 +190,7 @@
 
                                                     <div class="input-group from mb-15">
                                                         <span class="input-group-addon">from</span>
-                                                        <input class="oh-timepicker form-control" type="text" name="Opening">
+                                                        <input class="oh-timepicker form-control" type="text" name="Opening" id="timepicker_open">
                                                     </div>
 
                                                 </div>
@@ -199,7 +199,7 @@
 
                                                     <div class="input-group to mb-15">
                                                         <span class="input-group-addon">to</span>
-                                                        <input class="oh-timepicker form-control" type="text" name="Closing">
+                                                        <input class="oh-timepicker form-control" type="text" name="Closing" id="timepicker_close">
                                                     </div>
 
                                                 </div>
@@ -218,7 +218,7 @@
 
                                                     <div class="input-group from mb-15">
                                                         <span class="input-group-addon">from</span>
-                                                        <input class="oh-timepicker form-control" type="text" name="Opening">
+                                                        <input class="oh-timepicker form-control" type="text" name="Opening" id="time_open">
                                                     </div>
 
                                                 </div>
@@ -227,7 +227,7 @@
 
                                                     <div class="input-group to mb-15">
                                                         <span class="input-group-addon">to</span>
-                                                        <input class="oh-timepicker form-control" type="text" name="Closing">
+                                                        <input class="oh-timepicker form-control" type="text" name="Closing" id="time_close">
                                                     </div>
 
                                                 </div>
@@ -246,7 +246,7 @@
 
                                                     <div class="input-group from mb-15">
                                                         <span class="input-group-addon">from</span>
-                                                        <input class="oh-timepicker form-control" type="text" name="WednesdayFrom">
+                                                        <input class="oh-timepicker form-control" type="text" name="WednesdayFrom" id="time_open">
                                                     </div>
 
                                                 </div>
@@ -255,7 +255,7 @@
 
                                                     <div class="input-group to mb-15">
                                                         <span class="input-group-addon">to</span>
-                                                        <input class="oh-timepicker form-control" type="text" name="WednesdayTo">
+                                                        <input class="oh-timepicker form-control" type="text" name="WednesdayTo" id="time_close">
                                                     </div>
 
                                                 </div>
@@ -274,7 +274,7 @@
 
                                                     <div class="input-group from mb-15">
                                                         <span class="input-group-addon">from</span>
-                                                        <input class="oh-timepicker form-control" type="text" name="ThurstdayFrom">
+                                                        <input class="oh-timepicker form-control" type="text" name="ThurstdayFrom" id="time_open">
                                                     </div>
 
                                                 </div>
@@ -283,7 +283,7 @@
 
                                                     <div class="input-group to mb-15">
                                                         <span class="input-group-addon">to</span>
-                                                        <input class="oh-timepicker form-control" type="text" name="ThurstdayTo">
+                                                        <input class="oh-timepicker form-control" type="text" name="ThurstdayTo" id="time_close">
                                                     </div>
 
                                                 </div>
@@ -302,7 +302,7 @@
 
                                                     <div class="input-group from mb-15">
                                                         <span class="input-group-addon">from</span>
-                                                        <input class="oh-timepicker form-control" type="text" name="FridayFrom">
+                                                        <input class="oh-timepicker form-control" type="text" name="FridayFrom" id="time_open">
                                                     </div>
 
                                                 </div>
@@ -311,7 +311,7 @@
 
                                                     <div class="input-group to mb-15">
                                                         <span class="input-group-addon">to</span>
-                                                        <input class="oh-timepicker form-control" type="text" name="FridayTo">
+                                                        <input class="oh-timepicker form-control" type="text" name="FridayTo" id="time_close">
                                                     </div>
 
                                                 </div>
@@ -330,7 +330,7 @@
 
                                                     <div class="input-group from mb-15">
                                                         <span class="input-group-addon">from</span>
-                                                        <input class="oh-timepicker form-control" type="text" name="SaturdayFrom">
+                                                        <input class="oh-timepicker form-control" type="text" name="SaturdayFrom" id="time_open">
                                                     </div>
 
                                                 </div>
@@ -339,7 +339,7 @@
 
                                                     <div class="input-group to mb-15">
                                                         <span class="input-group-addon">to</span>
-                                                        <input class="oh-timepicker form-control" type="text" name="SaturdayTo">
+                                                        <input class="oh-timepicker form-control" type="text" name="SaturdayTo" id="time_close">
                                                     </div>
 
                                                 </div>
@@ -358,7 +358,7 @@
 
                                                     <div class="input-group from mb-15">
                                                         <span class="input-group-addon">from</span>
-                                                        <input class="oh-timepicker form-control" type="text" name="SundayFrom">
+                                                        <input class="oh-timepicker form-control" type="text" name="SundayFrom" id="time_open">
                                                     </div>
 
                                                 </div>
@@ -366,8 +366,8 @@
                                                 <div class="col-xs-6 col-sm-6 col-md-6">
 
                                                     <div class="input-group to mb-15">
-                                                        <span class="input-group-addon">to</span>
-                                                        <input class="oh-timepicker form-control" type="text" name="SundayTo">
+                                                        <span class="input-group-addon">to</span> 
+                                                        <input class="oh-timepicker form-control" type="text" name="SundayTo" id="time_close">
                                                     </div>
 
                                                 </div>
