--- a/src/FlexTemplate/Views/Home/EditPlace.cshtml
+++ b/src/FlexTemplate/Views/Home/EditPlace.cshtml
@@ -565,7 +565,7 @@
                                 <input class="file_descriptor" type="hidden" value="@Model.Id" />
                                 <div class="dz-default dz-message"><span>Головна фотографія</span></div>
                             </div>
-                            <div id="banner-update" class="dropzone">
+                            <div id="place-banner-update" class="dropzone">
                                 <input type="file">
                                 <input class="file_descriptor" type="hidden" value="@Model.Id" />
                                 <div class="dz-default dz-message"><span>Баннер</span></div>
