--- a/src/FlexTemplate/Views/Home/NewBlog.cshtml
+++ b/src/FlexTemplate/Views/Home/NewBlog.cshtml
@@ -1,4 +1,5 @@
-﻿<!-- start Main Wrapper -->
+﻿@model FlexTemplate.ViewModels.HomeController.NewBlogViewModel
+<!-- start Main Wrapper -->
 <div class="main-wrapper scrollspy-container">
     <!-- start hero-header -->
     <div class="hero hero-breadcrumb" style="background-image:url('../../images/hero-header/03.jpg');">
@@ -17,7 +18,7 @@
         <div class="row mt-40 mb-30">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
                 <div class="submite-list-wrapper">
-                    <form method="post" asp-controller="Home" asp-action="NewBlog" enctype="multipart/form-data" id="new-blog-form">
+                    <form method="post" enctype="multipart/form-data" id="new-blog-form">
                         <!--Main info-->
                         <div class="submite-list-box">
                             <div class="row ga-20">
@@ -30,7 +31,7 @@
                                 <div class="col-xs-12 col-sm-12">
                                     <div class="form-group bootstrap3-wysihtml5-wrapper">
                                         <label>Текст 1</label>
-                                        <textarea name="Description" class="bootstrap3-wysihtml5 form-control" placeholder="Введіть текст ..." style="height: 200px;"></textarea>
+                                        <textarea name="Preamble" class="bootstrap3-wysihtml5 form-control" placeholder="Введіть текст ..." style="height: 200px;"></textarea>
                                     </div>
                                 </div>
                             </div>
@@ -45,25 +46,35 @@
                                 </div>
                             </div>
                         </div>
+                        @{ var uid = Guid.NewGuid().ToString();}
                         <div class="submite-list-box">
+                            <div id="blog-head-update" class="dropzone">
+                                <input type="file">
+                                <input class="file_descriptor" type="hidden" value="@uid" />
+                                <div class="dz-default dz-message"><span>Головна фотографія</span></div>
+                            </div>
+                            <div id="blog-banner-update" class="dropzone">
+                                <input type="file">
+                                <input class="file_descriptor" type="hidden" value="@uid" />
+                                <div class="dz-default dz-message"><span>Баннер</span></div>
+                            </div>
                             <div id="new-blog" class="dropzone">
                                 <input name="files" type="file" multiple>
-                                <input class="file_descriptor" type="hidden" name="uid" value="@Guid.NewGuid().ToString()" />
-                                <div class="dz-default dz-message"><span>Натисніть або перетяніть сюди зображення</span></div>
+                                <input class="file_descriptor" type="hidden" name="uid" value="@uid" />
+                                <div class="dz-default dz-message"><span>Фотографії галереї</span></div>
                             </div>
                         </div>
                         <!--End Фотографії-->
                         <div class="col-xs-12 col-sm-12">
                             <div class="form-group bootstrap3-wysihtml5-wrapper">
                                 <label>Текст 2:</label>
-                                <textarea name="Description" class="bootstrap3-wysihtml5 form-control" placeholder="Введіть текст ..." style="height: 200px;"></textarea>
+                                <textarea name="Text" class="bootstrap3-wysihtml5 form-control" placeholder="Введіть текст ..." style="height: 200px;"></textarea>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-6 col-md-7 xs-mb">
-                            <div class="tag-cloud clearfix mt-0">
-                                <span><i class="fa fa-tags"></i> Теги: </span>
-                                <a href="#" class="tag-item">HTML5</a> <a href="#" class="tag-item">CSS3</a> <a href="#" class="tag-item">jQuery</a>
-                                <a href="#" class="tag-item">Creative</a>
+                        <div class="col-xs-12 col-sm-12">
+                            <div class="form-group">
+                                <label>Tags</label>
+                                <input type="text" class="form-control" id="autocompleteTagging" value="" name="Tags" placeholder="Теги.." />
                             </div>
                         </div>
                         <!--Submit-->
