--- a/src/FlexTemplate/Views/Home/NewPlace.cshtml
+++ b/src/FlexTemplate/Views/Home/NewPlace.cshtml
@@ -493,12 +493,12 @@
                         </div>
                         @{ var uid = Guid.NewGuid().ToString();}
                         <div class="submite-list-box">
-                            <div id="head-update" class="dropzone">
+                            <div id="place-head-update" class="dropzone">
                                 <input type="file">
                                 <input class="file_descriptor" type="hidden" value="@uid"/>
                                 <div class="dz-default dz-message"><span>Головна фотографія</span></div>
                             </div>
-                            <div id="banner-update" class="dropzone">
+                            <div id="place-banner-update" class="dropzone">
                                 <input type="file">
                                 <input class="file_descriptor" type="hidden" value="@uid" />
                                 <div class="dz-default dz-message"><span>Баннер</span></div>
