--- a/src/FlexTemplate/Views/Home/Blog.cshtml
+++ b/src/FlexTemplate/Views/Home/Blog.cshtml
@@ -44,7 +44,7 @@
                         </div>
                         <div class="content blog-entry">
                             <p>@Model.Blog.Preamble</p>
-                            <img src="../../Resources/Blogs/@(Model.Blog.Id).jpg" alt="image" onerror="this.onerror = null; this.src = '../../Resources/Defaults/blog.jpg';" />
+                            <img src="../../Resources/Blogs/@(Model.Blog.Id)/head.jpg" alt="image" onerror="this.onerror = null; this.src = '../../Resources/Defaults/blog.jpg';" />
                             <p>@Model.Blog.Text</p>
                         </div>
 
