--- a/src/FlexTemplate/Views/Home/Blogs.cshtml
+++ b/src/FlexTemplate/Views/Home/Blogs.cshtml
@@ -49,7 +49,7 @@
                                             <div class="overlay-box">
 
                                                 <a href="#">
-                                                    <img src="images/post-grid/01.jpg" alt="image" />
+                                                    <img src="../../Resources/Blogs/@(blog.Id)/head.jpg" alt="image" onerror="this.onerror = null; this.src = '../../Resources/Defaults/blog.jpg';"/>
                                                     <div class="image-overlay">
                                                         <div class="overlay-content">
                                                             <div class="overlay-icon"><i class="pe-7s-link"></i></div>
