--- a/src/FlexTemplate/Views/Home/Components/ThisPlacesList/List.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/ThisPlacesList/List.cshtml
@@ -24,7 +24,7 @@
                                 <div class="content">
                                     <h5><a asp-controller="Home" asp-action="Place" asp-route-id="@place.Id">@place.Name</a></h5>
                                     <p class="location"><i class="fa fa-map-marker"></i> @place.Address @place.Street?.Name, @place.Street?.City?.Name</p>
-                                    <p class="short-info">@place.Description?.Substring(0, place.Description.Length > 100 ? 100 : place.Description.Length)...</p>
+                                    <p class="short-info">@Html.Raw(place.Description)</p>
                                     <p class="text-primary offer">-30% від меню «а ля карт»! * </p>
                                     <p class="cuisine">
                                         Кухня:
@@ -42,7 +42,7 @@
                                 <div class="meta">
                                     <div class="rating-wrapper">
                                         <div class="rating-item">
-                                            <input type="hidden" class="rating" data-filled="oi oi-star" data-empty="oi oi-star" data-fractions="2" data-readonly value="4" />
+                                            <input type="hidden" class="rating" data-filled="oi oi-star" data-empty="oi oi-star" data-fractions="2" data-readonly value="@(place.Reviews.Any() ? Math.Ceiling(place.Reviews.Average(r => r.Star)) : 0))" />
                                         </div>
                                         <span class="texting"> (@place.Reviews.Count відгуків)</span>
                                     </div>
