--- a/src/FlexTemplate/Views/Shared/Components/Header/Solid.cshtml
+++ b/src/FlexTemplate/Views/Shared/Components/Header/Solid.cshtml
@@ -12,6 +12,7 @@
                     <ul class="nav navbar-nav" id="responsive-menu">
                         <li><a asp-controller="Home" asp-action="Index">Головна</a></li>
                         <li><a asp-controller="Home" asp-action="Places">Ресторани</a></li>
+                        <li><a asp-controller="Home" asp-action="Blogs">Блоги</a></li>
                         <li><a asp-controller="Home" asp-action="NewPlace">Додати ресторан</a></li>
                         <li>
                             <a>Увійти(Тест)</a>
