--- a/src/FlexTemplate/Views/Home/Blogs.cshtml
+++ b/src/FlexTemplate/Views/Home/Blogs.cshtml
@@ -48,7 +48,7 @@
 
                                             <div class="overlay-box">
 
-                                                <a href="#">
+                                                <a asp-controller="Home" asp-action="Blog" asp-route-id="@blog.Id">
                                                     <img src="../../Resources/Blogs/@(blog.Id)/head.jpg" alt="image" onerror="this.onerror = null; this.src = '../../Resources/Defaults/blog.jpg';"/>
                                                     <div class="image-overlay">
                                                         <div class="overlay-content">
@@ -61,7 +61,7 @@
 
                                             <div class="recent-post-meta clearfix">
                                                 <div class="date-posted">@blog.CreatedOn</div>
-                                                <div>by: @blog.Author.Name @blog.Author.Surname</div>
+                                                <div>by: @(blog.Author != null ? $"{blog.Author.Name} {blog.Author.Surname}" : string.Empty)</div>
                                                 <div>in: Review Trip</div>
                                             </div>
 
@@ -72,7 +72,7 @@
                                             <h4><a asp-controller="Home" asp-action="Blog" asp-route-id="@blog.Id">@blog.Caption</a></h4>
                                             <p class="recent-post-entry">@blog.Preamble</p>
 
-                                            <a href="#" class="btn btn-primary btn-inverse btn-sm">Read more <i class="fa fa-long-arrow-right"></i></a>
+                                            <a asp-controller="Home" asp-action="Blog" asp-route-id="@blog.Id" class="btn btn-primary btn-inverse btn-sm">Read more <i class="fa fa-long-arrow-right"></i></a>
 
                                         </div>
 
@@ -87,27 +87,23 @@
                         </div>
 
                         <div class="pagination-wrapper mt-40 mb-0">
-
                             <div class="GridLex-grid-middle GridLex-grid-noGutter">
                                 <div class="GridLex-col GridLex-col-12_sm-12_xs-12 pb-0">
 
                                     <nav>
-                                        <ul class="pagination text-center">
-                                            <li>
-                                                <a href="#" aria-label="Previous">
-                                                    <span aria-hidden="true">&laquo;</span>
-                                                </a>
-                                            </li>
-                                            <li class="active"><a href="blogs1">1</a></li>
-                                            <li><a href="blogs/2">2</a></li>
-                                            <li><a href="blogs/3">3</a></li>
-                                            <li><a href="blogs/4">4</a></li>
-                                            <li><a href="blogs/5">5</a></li>
-                                            <li>
-                                                <a href="#" aria-label="Next">
-                                                    <span aria-hidden="true">&raquo;</span>
-                                                </a>
-                                            </li>
+                                        <ul class="blogs-pagination pagination pagination-text-center-sm mb-5-xs">
+                                            @if (Model.CurrentPage > 1)
+                                            {
+                                                <li><a data-id="@(Model.CurrentPage - 1)" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
+                                            }
+                                            @for (var i = 1; i <= Model.Pages; i++)
+                                            {
+                                                <li class="@(Model.CurrentPage == i ? "active" : string.Empty)"><a data-id="@i">@i</a></li>
+                                            }
+                                            @if (Model.CurrentPage < Model.Pages)
+                                            {
+                                                <li><a data-id="@(Model.CurrentPage + 1)" aria-label="Next"><span aria-hidden="true">&raquo;</span></a></li>
+                                            }
                                         </ul>
                                     </nav>
 
