--- a/src/FlexTemplate/Views/Home/Components/BlogsFeed/Default.cshtml
+++ b/src/FlexTemplate/Views/Home/Components/BlogsFeed/Default.cshtml
@@ -1,202 +1,162 @@
-﻿@using System.Linq
-@using FlexTemplate.Entities
-@using FlexTemplate.ViewModels.HomeController
-@model FlexTemplate.ViewModels.HomeController.BlogsFeedViewModel
-<div class="col-sm-4 col-md-3 col-xs-12">
+﻿@using FlexTemplate.ViewModels.HomeController
+@model BlogsFeedViewModel
+<form asp-action="Blogs">
+    <input id="currentPage" type="hidden" name="currentPage" value="" />
+    <div class="col-sm-4 col-md-3 col-xs-12">
 
-    <aside class="sidebar-wrapper for-blog">
+        <aside class="sidebar-wrapper for-blog">
 
-        <div class="sidebar-module">
-            <div class="sidebar-module-inner">
-                <div class="sidebar-mini-search">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Шукати...">
-                        <span class="input-group-btn">
-                            <button class="btn btn-primary" type="button"><i class="fa fa-search"></i></button>
-                        </span>
+            <div class="sidebar-module">
+                <div class="sidebar-module-inner">
+                    <div class="sidebar-mini-search">
+                        <div class="input-group">
+                            <input type="text" class="form-control" name="input" placeholder="Шукати...">
+                            <span class="input-group-btn">
+                                <button onclick="this.form.submit();" class="btn btn-primary" type="button"><i class="fa fa-search"></i></button>
+                            </span>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <div class="clear"></div>
+            <div class="clear"></div>
 
-        <div class="section-title-02">
-            <h4><span>Категорії</span></h4>
-        </div>
-
-        <div class="sidebar-module clearfix">
-
-            <ul class="sidebar-category">
-                <li><a href="#">Business<span>(25)</span></a></li>
-                <li class="active"><a href="#">Commerce<span>(2)</span></a></li>
-                <li><a href="#">Coporate<span>(14)</span></a></li>
-                <li><a href="#">Creative<span>(157)</span></a></li>
-                <li><a href="#">Entertainment<span>(87)</span></a></li>
-                <li><a href="#">Nonprofit<span>(47)</span></a></li>
-                <li><a href="#">Personal<span>(8)</span></a></li>
-                <li><a href="#">Technology<span>(32)</span></a></li>
-                <li><a href="#">Miscellaneous<span>(26)</span></a></li>
-            </ul>
-
-        </div>
-
-        <div class="section-title-02">
-            <h4><span>Останні повідомлення</span></h4>
-        </div>
-
-        <div class="sidebar-module clearfix">
-
-            <ul class="sidebar-post">
-                <li class="clearfix">
-                    <a href="blog-single.html">
-                        <div class="image">
-                            <img src="images/blog/01-sm.jpg" alt="Popular Post" />
-                        </div>
-                        <div class="content">
-                            <h6>Enough around remove to barton agreed regret</h6>
-                            <p class="recent-post-sm-meta"><i class="fa fa-clock-o mr-5"></i>June 01, 2016</p>
-                        </div>
-                    </a>
-                </li>
-                <li class="clearfix">
-                    <a href="blog-single.html">
-                        <div class="image">
-                            <img src="images/blog/02-sm.jpg" alt="Popular Post" />
-                        </div>
-                        <div class="content">
-                            <h6>Year well shot deny shew come now had. Shall downs stand marry taken his for out</h6>
-                            <p class="recent-post-sm-meta"><i class="fa fa-clock-o mr-5"></i>April 25, 2016</p>
-                        </div>
-                    </a>
-                </li>
-                <li class="clearfix">
-                    <a href="blog-single.html">
-                        <div class="image">
-                            <img src="images/blog/03-sm.jpg" alt="Popular Post" />
-                        </div>
-                        <div class="content">
-                            <h6>Do related mr account brandon an up. Wrong for never ready ham these witty him</h6>
-                            <p class="recent-post-sm-meta"><i class="fa fa-clock-o mr-5"></i>March 20, 2016</p>
-                        </div>
-                    </a>
-                </li>
-                <li class="clearfix">
-                    <a href="blog-single.html">
-                        <div class="image">
-                            <img src="images/blog/04-sm.jpg" alt="Popular Post" />
-                        </div>
-                        <div class="content">
-                            <h6>Our compass see age uncivil matters weather forbade her minutes</h6>
-                            <p class="recent-post-sm-meta"><i class="fa fa-clock-o mr-5"></i>March 05, 2016</p>
-                        </div>
-                    </a>
-                </li>
-                <li class="clearfix">
-                    <a href="blog-single.html">
-                        <div class="image">
-                            <img src="images/blog/05-sm.jpg" alt="Popular Post" />
-                        </div>
-                        <div class="content">
-                            <h6>Ready how but truth son new under.</h6>
-                            <p class="recent-post-sm-meta"><i class="fa fa-clock-o mr-5"></i>February 17, 2015</p>
-                        </div>
-                    </a>
-                </li>
-            </ul>
-
-
-        </div>
-
-        <div class="section-title-02">
-            <h4><span>Популярні повідомлення</span></h4>
-        </div>
-
-        <div class="sidebar-module clearfix">
-
-            <ul class="sidebar-post">
-                @foreach (BlogsFeedItem blog in Model.Blogs)
-                {
-
-                    <li class="clearfix">
-                        <a href="blog-single.html">
-                            <div class="image">
-                                <img src="images/blog/01-sm.jpg" alt="Popular Post" />
-                            </div>
-                            <div class="content">
-                                <h6>@blog.Caption</h6>
-                                <p class="recent-post-sm-meta"><i class="fa fa-comments mr-5"></i>@blog.CommentsCount</p>
-                            </div>
-                        </a>
-                    </li>
-                }
-            </ul>
-
-
-        </div>
-
-        <div class="section-title-02">
-            <h4><span>Архів</span></h4>
-        </div>
-
-        <div class="sidebar-module clearfix">
-
-            <ul class="sidebar-archives">
-                <li><a href="#">January 2015<span>(25)</span></a></li>
-                <li class="active"><a href="#">February 2015<span>(2)</span></a></li>
-                <li><a href="#">March 2015<span>(14)</span></a></li>
-                <li><a href="#">April 2015<span>(157)</span></a></li>
-                <li><a href="#">June 2015<span>(87)</span></a></li>
-            </ul>
-
-        </div>
-
-        <div class="section-title-02">
-            <h4><span>Теги</span></h4>
-        </div>
-
-        <div class="sidebar-module clearfix">
-
-            <div class="tag-cloud clearfix">
-                <a href="#" class="tag-item">HTML5</a> <a href="#" class="tag-item">CSS3</a> <a href="#" class="tag-item">jQuery</a>
-                <a href="#" class="tag-item">Creative</a> <a href="#" class="tag-item">Design</a> <a href="#" class="tag-item">iOS</a>
-                <a href="#" class="tag-item">Android</a> <a href="#" class="tag-item">Video</a> <a href="#" class="tag-item">Markup</a>
-                <a href="#" class="tag-item">Programming</a> <a href="#" class="tag-item">SEO</a>
+            <div class="section-title-02">
+                <h4><span>Теги</span></h4>
             </div>
 
-        </div>
+            <div class="sidebar-module clearfix">
 
-        <div class="section-title-02">
-            <h4><span>Sidebar Text Widget</span></h4>
-        </div>
-
-        <div class="sidebar-module clearfix">
-
-            <div class="sidebar-text-widget">
-                <p>In alteration insipidity impression by travelling reasonable up motionless. Of regard warmth by unable sudden garden ladies. No kept hung am size spot no. Likewise led and dissuade <a href="#">rejoiced</a> welcomed husbands boy.</p>
-                <ul>
-                    <li>Eat imagine you chiefly few end ferrars compass</li>
-                    <li>Be visitor females am ferrars inquiry</li>
-                    <li>Latter law remark two lively thrown</li>
-                    <li>Spot set they know rest its</li>
-                    <li>Raptures law diverted believed jennings</li>
+                <ul class="sidebar-category">
+                    @foreach (var tag in Model.Tags)
+                    {
+                        <li><a asp-controller="Home" asp-action="Blogs" asp-route-tag="@tag.Id">@tag.Caption<span>(@tag.BlogsCount)</span></a></li>
+                    }
                 </ul>
+
             </div>
 
-        </div>
+            <div class="section-title-02">
+                <h4><span>Останні повідомлення</span></h4>
+            </div>
 
-        <div class="section-title-02">
-            <h4><span>Meta</span></h4>
-        </div>
+            <div class="sidebar-module clearfix">
 
-        <div class="sidebar-module clearfix">
-            <ul class="sidebar-list mb-0">
-                <li><a href="#">Log in</a></li>
-                <li><a href="#">Entries RSS</a></li>
-                <li><a href="#">Comments RSS</a></li>
-                <li><a href="#">WordPress.org</a></li>
-            </ul>
-        </div>
+                <ul class="sidebar-post">
+                    @foreach (var blog in Model.LatestBlogs)
+                    {
+                        <li class="clearfix">
+                            <a asp-controller="Home" asp-action="Blog" asp-route-id="@blog.Id">
+                                <div class="image">
+                                    <img src="../../Resources/Blogs/@(blog.Id)/head.jpg" alt="image" onerror="this.onerror = null; this.src = '../../Resources/Defaults/blog.jpg';" />
+                                </div>
+                                <div class="content">
+                                    <h6>@blog.Caption</h6>
+                                    <p class="recent-post-sm-meta">
+                                        <i class="fa fa-clock-o mr-5"></i>@blog.CreatedOn
+                                    </p>
+                                </div>
+                            </a>
+                        </li>
+                    }
+                </ul>
 
 
-    </aside>
+            </div>
+
+            <div class="section-title-02">
+                <h4><span>Популярні повідомлення</span></h4>
+            </div>
+
+            <div class="sidebar-module clearfix">
+
+                <ul class="sidebar-post">
+                    @foreach (BlogsFeedItem blog in Model.Blogs)
+                    {
+
+                        <li class="clearfix">
+                            <a asp-controller="Home" asp-action="Blog" asp-route-id="@blog.Id">
+                                <div class="image">
+                                    <img src="../../Resources/Blogs/@(blog.Id)/head.jpg" alt="image" onerror="this.onerror = null; this.src = '../../Resources/Defaults/blog.jpg';" />
+                                </div>
+                                <div class="content">
+                                    <h6>@blog.Caption</h6>
+                                    <p class="recent-post-sm-meta"><i class="fa fa-comments mr-5"></i>@blog.CommentsCount</p>
+                                </div>
+                            </a>
+                        </li>
+                    }
+                </ul>
+
+
+            </div>
+
+            @*<div class="section-title-02">
+                <h4><span>Архів</span></h4>
+            </div>
+
+            <div class="sidebar-module clearfix">
+
+                <ul class="sidebar-archives">
+                    <li><a href="#">January 2015<span>(25)</span></a></li>
+                    <li class="active"><a href="#">February 2015<span>(2)</span></a></li>
+                    <li><a href="#">March 2015<span>(14)</span></a></li>
+                    <li><a href="#">April 2015<span>(157)</span></a></li>
+                    <li><a href="#">June 2015<span>(87)</span></a></li>
+                </ul>
+
+            </div>
+
+            <div class="section-title-02">
+                <h4><span>Теги</span></h4>
+            </div>
+
+            <div class="sidebar-module clearfix">
+
+                <div class="tag-cloud clearfix">
+                    <a href="#" class="tag-item">HTML5</a> <a href="#" class="tag-item">CSS3</a> <a href="#" class="tag-item">jQuery</a>
+                    <a href="#" class="tag-item">Creative</a> <a href="#" class="tag-item">Design</a> <a href="#" class="tag-item">iOS</a>
+                    <a href="#" class="tag-item">Android</a> <a href="#" class="tag-item">Video</a> <a href="#" class="tag-item">Markup</a>
+                    <a href="#" class="tag-item">Programming</a> <a href="#" class="tag-item">SEO</a>
+                </div>
+
+            </div>
+
+            <div class="section-title-02">
+                <h4><span>Sidebar Text Widget</span></h4>
+            </div>
+
+            <div class="sidebar-module clearfix">
+
+                <div class="sidebar-text-widget">
+                    <p>
+                        In alteration insipidity impression by travelling reasonable up motionless. Of regard warmth by unable sudden garden ladies. No kept hung am size spot no. Likewise led and dissuade <a href="#">rejoiced</a> welcomed husbands boy.
+                    </p>
+                    <ul>
+                        <li>Eat imagine you chiefly few end ferrars compass</li>
+                        <li>Be visitor females am ferrars inquiry</li>
+                        <li>Latter law remark two lively thrown</li>
+                        <li>Spot set they know rest its</li>
+                        <li>Raptures law diverted believed jennings</li>
+                    </ul>
+                </div>
+
+            </div>
+
+            <div class="section-title-02">
+                <h4><span>Meta</span></h4>
+            </div>
+
+            <div class="sidebar-module clearfix">
+                <ul class="sidebar-list mb-0">
+                    <li><a href="#">Log in</a></li>
+                    <li><a href="#">Entries RSS</a></li>
+                    <li><a href="#">Comments RSS</a></li>
+                    <li><a href="#">WordPress.org</a></li>
+                </ul>
+            </div>*@
+
+
+        </aside>
+    </div>
+</form>
