--- a/src/FlexTemplate/Views/Shared/Components/Header/Transparent.cshtml
+++ b/src/FlexTemplate/Views/Shared/Components/Header/Transparent.cshtml
@@ -4,97 +4,26 @@
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="header-inner">
             <div class="navbar-header">
-                <a class="navbar-brand hidden-xs off-sticky" href="index.html"><img src="~/images/logo-white.png" alt="Image" /></a>
-                <a class="navbar-brand hidden-xs on-sticky" href="index.html"><img src="~/images/logo.png" alt="Image" /></a>
-                <a class="navbar-brand visible-xs" href="index.html"><img src="~/images/logo-white-xs.png" alt="Image" /></a>
+                <a class="navbar-brand hidden-xs" asp-controller="Home" asp-action="Index"><img src="../../images/logo.png" alt="Image" /></a>
+                <a class="navbar-brand visible-xs" asp-controller="Home" asp-action="Index"><img src="../../images/logo-xs.png" alt="Image" /></a>
             </div>
             <div id="navbar" class="collapse navbar-collapse navbar-arrow pull-left">
                 <ul class="nav navbar-nav" id="responsive-menu">
                     <li>
                         <ul>
-                            <li><a href="@Url.Action("Index", "Home")">Головна</a></li>
-                            <li><a href="@Url.Action("Places", "Home")">Ресторани</a></li>
-                            <li><a href="@Url.Action("NewPlace", "Home")">Додати ресторан</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">Restaurant</a>
-                        <ul>
-                            <li><a href="restuarant-result-grid.html">Restuarant Result - Grid</a></li>
-                            <li><a href="restuarant-result-list.html">Restuarant Result - List</a></li>
+                            <li><a asp-controller="Home" asp-action="Index">Головна</a></li>
+                            <li><a asp-controller="Home" asp-action="Places">Ресторани</a></li>
+                            <li><a asp-controller="Home" asp-action="Blogs">Блоги</a></li>
+                            <li><a asp-controller="Home" asp-action="NewPlace">Додати ресторан</a></li>
                             <li>
-                                <a href="restuarant-detail.html">Restuarant Detail</a>
-                                <ul>
-                                    <li><a href="restuarant-detail-2.html">Restuarant Detail - 02</a></li>
-                                    <li><a href="restuarant-detail-3.html">Restuarant Detail - 03</a></li>
-                                    <li><a href="restuarant-detail-4.html">Restuarant Detail - 04</a></li>
-                                    <li><a href="restuarant-detail-5.html">Restuarant Detail - 05</a></li>
-                                    <li><a href="restuarant-detail-6.html">Restuarant Detail - 06</a></li>
-                                    <li><a href="restuarant-detail-7.html">Restuarant Detail - 07</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="restuarant-review.html">Restuarant Review</a></li>
-                            <li>
-                                <a href="restuarant-reservation.html">Restuarant Reservation</a>
-                                <ul>
-                                    <li><a href="restuarant-reservation-2.html">Restuarant Reservation - 02</a></li>
-                                    <li><a href="restuarant-reservation-3.html">Restuarant Reservation - 03</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="restuarant-reservation-success.html">Restuarant Reservation Success</a></li>
-                            <li>
-                                <a href="restuarant-submit.html">Restuarant Submit</a>
-                                <ul>
-                                    <li><a href="restuarant-submit-2.html">Restuarant Submit - 02</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#">Boxed Width</a>
-                                <ul>
-                                    <li><a href="restuarant-result-grid-boxed.html">Restuarant Result - Grid</a></li>
-                                    <li><a href="restuarant-result-list-boxed.html">Restuarant Result - List</a></li>
-                                    <li><a href="restuarant-detail-boxed.html">Restuarant Detail</a></li>
-                                    <li><a href="restuarant-review-boxed.html">Restuarant Review</a></li>
-                                    <li><a href="restuarant-detail-boxed.html">Restuarant Reservation</a></li>
-                                    <li><a href="restuarant-submit-boxed.html">Restuarant Submit</a></li>
+                                <a>Увійти(Тест)</a>
+                                <ul style="display: none">
+                                    <li><a asp-controller="Login" asp-action="LoginAsAdmin">Як адміністратор</a></li>
+                                    <li><a asp-controller="Login" asp-action="LoginAsGuest">Як користувач</a></li>
                                 </ul>
                             </li>
                         </ul>
                     </li>
-                    <li><a href="how-it-work.html">How it works</a></li>
-                    <li>
-                        <a href="#">Page</a>
-                        <ul>
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="pricing.html">Pricing</a></li>
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="blog-single.html">Blog Single</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                            <li><a href="faq.html">Faq</a></li>
-                            <li><a href="static-page.html">Static Page</a></li>
-                            <li><a href="404-page.html">404 - Error Page</a></li>
-                            <li><a href="typography.html">Typography</a></li>
-                            <li><a href="element.html">Element</a></li>
-                            <li><a href="component.html">Component</a></li>
-                            <li>
-                               <a href="#">Layout</a>
-                                <ul>
-                                    <li><a href="layout-full-width.html">Full wdth</a></li>
-                                    <li><a href="layout-left-sidebar.html">Left Sidebar</a></li>
-                                    <li><a href="layout-right-sidebar.html">Right Sidebar</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#">Sub-menu</a>
-                                <ul>
-                                    <li><a href="#">Sub-menu 2</a></li>
-                                    <li><a href="#">Sub-menu 2</a></li>
-                                    <li><a href="#">Sub-menu 2</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                    <li><a href="@Url.Action("NewPlace", "Home")">List Your Restaurant</a></li>
 
                 </ul>
             </div><!--/.nav-collapse -->
