[ADD] Adding blogs

--- a/src/FlexTemplate/Views/Home/NewBlog.cshtml
+++ b/src/FlexTemplate/Views/Home/NewBlog.cshtml
@@ -47,6 +47,7 @@
                             </div>
                         </div>
                         @{ var uid = Guid.NewGuid().ToString();}
+                        <input type="hidden" name="Guid" value="@uid" />
                         <div class="submite-list-box">
                             <div id="blog-head-update" class="dropzone">
                                 <input type="file">
