--- a/src/FlexTemplate/Views/Shared/Components/Header/Transparent.cshtml
+++ b/src/FlexTemplate/Views/Shared/Components/Header/Transparent.cshtml
@@ -16,6 +16,13 @@
                             <li><a asp-controller="Home" asp-action="Blogs">Блоги</a></li>
                             <li><a asp-controller="Home" asp-action="NewPlace">Додати ресторан</a></li>
                             <li>
+                                <a>Додати(Тест)</a>
+                                <ul style="display: none">
+                                    <li><a asp-controller="Home" asp-action="NewBlog">Блог</a></li>
+                                    <li><a asp-controller="Home" asp-action="NewPlace">Заклад</a></li>
+                                </ul>
+                            </li>
+                            <li>
                                 <a>Увійти(Тест)</a>
                                 <ul style="display: none">
                                     <li><a asp-controller="Login" asp-action="LoginAsAdmin">Як адміністратор</a></li>
